
wxMSW:

- Fixed bug with using non default encoding in wxTextCtrl in ANSI build.
- Restored generation of events for accelerators when there is no menu bar.
- Fixed wxArtProvider::GetSizeHint() to return 16x16 for wxART_FRAME_ICON.
- Fixed toolbar buttons so that they don't disappear temporarily when clicked
  if the event handler causes window update.

wxGTK:

- Fixed printing to use fonts sizes adjustment consistent with wxMSW.

2.8.9
-----

All:

- Optimize wxString::Replace() for single character arguments.
- Updated Hindi translation (Priyank Bolia).
- Use tr1::unordered_{map,set} for wxHash{Map,Set} implementation if available
  in STL build; in particular do not use deprecated hash_{map,set} which
  results in a lot of warnings from newer g++ (Jan Van Dijk and Pete Stieber).

All (GUI):

- Added support for reading alpha channel in BMP format (Kevin Wright).
- Fixed help viewer bug whereby the splitter sash in wxHtmlHelpWindow could
  go underneath the left-hand pane, permanently, after resizing the
  help window.
- Fixed wxHTML default font size for printing to be 12pt regardless of the
  platform, instead of depending on GUI toolkit's screen configuration.
- Support wxDP_ALLOWNONE style in generic wxDatePickerCtrl version.
- Set wxKeyEvent::m_uniChar correctly in the events generated by generic
  wxListCtrl (Mikkel S).
- Fix changing size of merged cells in wxGrid (Laurent Humbertclaude).
- Fixed wrapping bug in wxRichTextCtrl when there were images present;
  now sets the cursor to the next line after pressing Shift+Enter.
- Fixed Cmd+Back, Cmd+Del word deletion behaviour in wxRichTextCtrl.
- Fix crash when reading malformed PCX images.
- Fix bug with wrong transparency in GIF animations (troelsk).
- Store palette information for XPM images in wxImage (troelsk).
- Fixed selection bugs and auto list numbering in wxRichTextCtrl.
- Significantly optimize wxGrid::BlockToDeviceRect() for large grids (kjones).